# ebtorch

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  .prepare-commit-msg  CITATION.cff  LICENSE  Makefile  README.md  functional  install.sh  pyproject.toml  pyrefly.toml  requirements.txt  setup.py  sider.yml  utils
.github/workflows/: auto-release-on-commit.yml  codacy.yml  codeql-analysis.yml  codeql.yml  pypipublish.yml  pyre.yml  sonarcloud.yml
ebtorch/: __init__.py
ebtorch/data/: __init__.py  cutmixup.py  datasets.py  prep.py  tinyimagenet.py
ebtorch/distributed/: __init__.py  qol.py  slurm.py
ebtorch/logging/: __init__.py  avgmeter.py  csvlog.py  logcsv.py  yamldump.py
ebtorch/nn/: __init__.py  adaptiveio.py  architectures.py  architectures_resnets_dm.py  architectures_scattgath.py  conv2drp.py  convolutional_flatten.py  convstems.py  coordconv.py  debuglayers.py  fieldtransform.py  functional.py  kwta.py  laplacenet.py  lmu.py  mish.py  nnsemble.py  original_kwta.py  penalties.py  reshapelayers.py  serf.py  serlu.py  sinlu.py  smelu.py  telu.py
ebtorch/nn/functional/: __init__.py  inner_functional.py
ebtorch/nn/utils/: __init__.py  actab.py  adverutils.py  attrsutils.py  autoclip.py  cacher.py  csttyping.py  evalutils.py  filtermanip.py  lrfinder.py  mapply.py  numtricks.py  onlyutils.py  palettes.py  patches.py  plotting.py  repr.py  reprutils.py  seeder.py  stabledivn.py  zzag.py
ebtorch/optim/: __init__.py  adabound.py  adahessian.py  adan.py  adopt.py  autowu.py  custom.py  hcgd.py  lamb.py  lion.py  lookahead.py  lookaround.py  madgrad.py  multiphase.py  poptims.py  radam.py  ranger.py  sam.py  schedcos.py  sophia.py
ebtorch/typing/: __init__.py  customtypes.py
ebtorch/utils/: __init__.py  onlyutils.py
