[build-system]
requires = ["setuptools>=75.8.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebtorch"
version = "0.34.4"
description = "Collection of PyTorch additions, extensions, utilities, uses and abuses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Emanuele Ballarin", email = "emanuele@ballarin.cc"}
]
keywords = ["Deep Learning", "Machine Learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "advertorch>=0.2.3",
    "distributed>=2024.12.1",
    "httpx>=0.27",
    "idna>=3.7",
    "matplotlib>=3.8",
    "medmnist>=3",
    "numpy>=1.24",
    "pillow>=9.5",
    "PyYAML>=6.0.2",
    "requests>=2.32.4",
    "safe_assert>=0.5",
    "safetensors>=0.5.3",
    "setuptools>=75.8.2",
    "thrmt>=0.0.6",
    "torch>=2.5",
    "torch-lr-finder>=0.2.1",
    "torchattacks>=3.5.1",
    "torchvision>=0.15",
    "tqdm>=4.65",
    "urllib3>=2.5",
]

[project.urls]
Homepage = "https://github.com/emaballarin/ebtorch"
Repository = "https://github.com/emaballarin/ebtorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["ebtorch*"]
